--- a/style.css
+++ b/style.css
@@ -50,15 +50,16 @@ p {
     font-size: 16px;
 }
 
-.hero {
+
+#background{
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image:
     background-size: cover;
     background-position: center;
+    position: relative;
 }
-
 .float-left {
     float: left;
     margin-right: 25px;
