--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 body {
     background-color: #d9dcd6;
 }
-
-.header {
+/* changed header to main menu */
+.mainMenu {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -32,11 +32,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header ul {
     list-style-type: none;
 }
 
-.header div ul li {
+#navigation-bar ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -55,7 +55,6 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image:
     background-size: cover;
     background-position: center;
     position: relative;
