changed div tag to nav tag

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .mainMenu h1 .seo {
     color: #d9dcd6;
 }
-/* changed class to main menu */
+/* changed class to mainMenu */
 /* changed div to nav */
 .mainMenu nav {
     padding-top: 15px;
