--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-/* changed header to main menu */
+/* Selector was changed from div to mainMenu for the following five rule-sets */
 .mainMenu {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -23,8 +23,8 @@ body {
 .mainMenu h1 .seo {
     color: #d9dcd6;
 }
-/* changed class to mainMenu */
-/* changed div to nav */
+
+/* Selector div was changed to nav  */
 .mainMenu nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -36,7 +36,7 @@ body {
 .mainMenu ul {
     list-style-type: none;
 }
-
+/* Selector was changed from div to navigationBar */
 #navigationBar ul li {
     display: inline-block;
     margin-left: 25px;
@@ -50,7 +50,6 @@ a {
 p {
     font-size: 16px;
 }
-
 
 #background{
     height: 800px;
@@ -75,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* Quotations were added to "Calibri" value under font-family */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -83,10 +82,10 @@ p {
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Selecttors with the same declarations were merged for the following six rule-sets */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost  {
@@ -108,8 +107,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-
+/* Quotations were added to "Calibri" value under font-family */
 .search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing  {
@@ -121,33 +119,19 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2{
     margin-bottom: 20px;
     font-size: 36px;
 }
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* Selector div was changed to footer */
 .footer {
     padding: 30px;
     clear: both;
