--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     background-color: #d9dcd6;
 }
-/* Selector was changed from div to mainMenu for the following five rule-sets */
+/* Selector was updated from div to mainMenu for the following five rule-sets */
 .mainMenu {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-/* Selector div was changed to nav  */
+/* Selector div was updated to nav  */
 .mainMenu nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -36,7 +36,7 @@ body {
 .mainMenu ul {
     list-style-type: none;
 }
-/* Selector was changed from div to navigationBar */
+/* Selector div was updated to navigationBar */
 #navigationBar ul li {
     display: inline-block;
     margin-left: 25px;
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/* Selecttors with the same declarations were merged for the following six rule-sets */
+/* Selectors with the same declarations were consolidated for the following six rule-sets */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost  {
@@ -131,7 +131,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* Selector div was changed to footer */
+/* Selector div was updated to footer */
 .footer {
     padding: 30px;
     clear: both;
