--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* Selector div was updated to footer */
+/* Selector div was updated to footer for the following two rule-sets */
 .footer {
     padding: 30px;
     clear: both;
